Fixed SQL grammar and array format